Upgraded all old javax namespaces for jakarta. Upgraded dependencies and added addional module-info directives required to get things running