@@ -8,15 +8,19 @@ application {
   applicationDefaultJvmArgs = [
     "-Dtessera.cli.type=ENCLAVE",
     "-Djnr.ffi.asm.enabled=false",
-    "-Djavax.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory",
-    "-Djavax.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory"
+    "-Dlogback.configurationFile=/Users/mark/Projects/consensys/tessera/enclave/enclave-jaxrs/build/resources/main/logback-enclave.xml",
+    "-Djakarta.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory",
+    "-Djakarta.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory",
+    "--add-opens=org.glassfish.json.jaxrs/org.glassfish.json.jaxrs=org.glassfish.hk2.utilities"
   ]
   startScripts.enabled = true
 }
 
 configurations.all {
-  exclude module: "jakarta.activation"
   exclude module: "jakarta.inject"
+  exclude group: "jakarta.servlet"
+  exclude group: "jakarta.json"
+  exclude group: "jakarta.mail"
 }
 
 dependencies {
@@ -27,6 +31,8 @@ dependencies {
   implementation "org.slf4j:slf4j-api"
   runtimeOnly "org.slf4j:jul-to-slf4j"
   runtimeOnly "org.slf4j:jcl-over-slf4j"
+  runtimeOnly "ch.qos.logback:logback-classic"
+  runtimeOnly "ch.qos.logback:logback-core"
 
   implementation project(":config")
   implementation project(":shared")
@@ -38,6 +44,7 @@ dependencies {
   implementation "org.apache.commons:commons-lang3"
 
   implementation "org.glassfish:jakarta.json"
+  implementation "com.fasterxml:classmate"
 
   implementation project(":tessera-jaxrs:jaxrs-client")
   implementation project(":tessera-context")
@@ -46,14 +53,15 @@ dependencies {
   implementation project(":cli:cli-api")
 
   testImplementation project(":server:jersey-server")
-
+  implementation("org.eclipse.persistence:org.eclipse.persistence.moxy")
   runtimeOnly "org.glassfish.jersey.inject:jersey-hk2"
-  runtimeOnly "org.glassfish.jersey.media:jersey-media-json-processing"
+  implementation "org.glassfish.jersey.media:jersey-media-json-processing"
   runtimeOnly "org.glassfish.jersey.media:jersey-media-moxy"
   runtimeOnly "com.sun.mail:jakarta.mail"
   implementation "org.bouncycastle:bcprov-jdk15on"
   implementation "org.bouncycastle:bcpkix-jdk15on"
   implementation project(":server:jersey-server")
+
 
   testImplementation "org.glassfish.jersey.core:jersey-server"
   testImplementation "org.glassfish.jersey.test-framework:jersey-test-framework-core"
@@ -72,10 +80,10 @@ dependencies {
 }
 
 distZip {
-  exclude("**/asm-*.jar")
+  // exclude("**/asm-*.jar")
 }
 distTar {
-  exclude("**/asm-*.jar")
+  // exclude("**/asm-*.jar")
 }
 
 publishing {
