@@ -1,33 +1,41 @@
 plugins {
   id "application"
   id "org.owasp.dependencycheck"
+  id "org.javamodularity.moduleplugin"
 }
 
 application {
   applicationName = "tessera"
   mainClass = "com.quorum.tessera.launcher.Main"
   mainModule = "tessera.application"
+  //  args = [
+  //    "--add-opens",
+  //    "org.glassfish.json.jaxrs/org.glassfish.json.jaxrs=org.glassfish.hk2.utilities",
+  //  ]
+  //
   applicationDefaultJvmArgs = [
     "-Dtessera.cli.type=CONFIG",
     "-Djnr.ffi.asm.enabled=false",
-    "-Djavax.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory",
-    "-Djavax.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory"
-
-    //           "--add-opens", "java.base/jdk.internal.misc=io.netty.common,ALL-UNNAMED",
-    //           "--add-exports", "java.base/jdk.internal.misc=io.netty.common,ALL-UNNAMED",
-    //            "--add-opens", "java.base/java.nio=io.netty.common,ALL-UNNAMED",
-    //            "-Dio.netty.tryReflectionSetAccessible=true",
-    //            "-Dreactor.netty.ioWorkerCount=128"
+    "-Djakarta.xml.bind.JAXBContextFactory=org.eclipse.persistence.jaxb.JAXBContextFactory",
+    "-Djakarta.xml.bind.context.factory=org.eclipse.persistence.jaxb.JAXBContextFactory",
+    "--add-opens=org.glassfish.json.jaxrs/org.glassfish.json.jaxrs=org.glassfish.hk2.utilities"
   ]
   startScripts.enabled = true
-
 }
 
 configurations.all {
   exclude module: "jakarta.persistence"
-  exclude module: "jakarta.activation"
+  exclude group: "jakarta.mail"
   exclude module: "jakarta.inject"
+  exclude group: "jakarta.json"
   exclude group: "org.ow2.asm"
+
+  exclude group: "io.swagger.core.v3", module: "swagger-core-jakarta"
+  exclude group: "io.swagger.core.v3", module: "swagger-parser"
+  exclude group: "io.swagger.core.v3", module: "swagger-jaxrs2-jakarta"
+  exclude group: "com.fasterxml.jackson.datatype"
+  exclude group: "com.fasterxml.jackson.core"
+  exclude group: "com.fasterxml.jackson.dataformat"
 }
 
 dependencies {
@@ -65,7 +73,13 @@ dependencies {
   implementation project(":encryption:encryption-jnacl")
   implementation project(":encryption:encryption-ec")
 
-  implementation "jakarta.validation:jakarta.validation-api"
+  api "jakarta.validation:jakarta.validation-api"
+  implementation "org.hibernate.validator:hibernate-validator"
+  implementation "com.fasterxml:classmate"
+
+  implementation 'com.sun.mail:jakarta.mail'
+
+  implementation "org.eclipse.persistence:org.eclipse.persistence.asm"
 
   implementation project(":tessera-context")
 
@@ -96,9 +110,7 @@ dependencyCheck {
 }
 
 publishing {
-
   publications {
-
     mavenJava(MavenPublication) {
       artifact distZip
       artifact distTar
